# homodyne-analysis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ADVANCED_FEATURES.md  API_REFERENCE.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CLI Options.txt  CLI_REFERENCE.md  CONFIGURATION_MODES.md  CONTRIBUTING.md  Chi-squared Calculation.txt  DEVELOPMENT.md  ENABLE_GITHUB_PAGES.md  FINAL_GITHUB_PAGES_SOLUTION.md  GITHUB_ACTIONS_FIXES.md  GITHUB_PAGES_FIXES.md  GITHUB_PAGES_FIX_SUMMARY.md  GITHUB_PAGES_SETUP.md  GPU_SETUP.md  IMPORT_CONVENTIONS.md  INSTALL_UNINSTALL.md  INTEGRATED_PERFORMANCE_MONITORING_REPORT.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_3_OPTIMIZATION_SUMMARY.md  PRE_COMMIT_SETUP.md  README.md  RELEASE_NOTES_v0.6.5.md  SCALING_OPTIMIZATION_DOCUMENTATION.md  SECURITY.md  VERIFICATION_REPORT_CONFIG.md  VERIFICATION_REPORT_IMPORTS.md  WARP.md  activate_gpu.sh  (+51 more)
.github/workflows/: README.md  ci.yml  claude.yml  code-quality.yml  deploy-docs.yml  docs-fallback.yml.disabled  docs-peaceiris.yml  docs-reliable.yml  docs-robust.yml  docs-simple.yml  docs.yml  performance-regression.yml  performance.yml  quality-monitoring.yml  quality.yml  release.yml  switch-to-fallback.sh
.github/workflows-disabled/: ci.yml  code-quality.yml  docs.yml  metrics.yml  performance.yml  release.yml
docker/: Dockerfile.test  docker-compose.test.yml
docs/: AUTHORS.rst  CHANGELOG.rst  CONFIGURATION_MODES.md  CONSOLIDATION_PLAN.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  MCMC_BOUNDS_FIX.md  Makefile  RELEASE_NOTES_v0.7.md  VERSION_UPDATE_GUIDE.md  advanced-completion-features.md  build_log.txt  completion-features.md  completion-system-comparison.md  completion-system-upgrade.md  conf.py  continuous_optimization_monitoring.md  deploy_docs.py  glossary.rst  index.rst  installation.md  performance.rst  requirements.txt  scientific_methods.md
docs/api/: README.md  analysis.rst  analysis_core.md  cli.rst  config.rst  core.rst  index.rst  optimization.rst  plotting.rst  runtime.rst
docs/api-reference/: core.rst  index.rst  mcmc.rst  models.rst  post-install.rst  robust.rst  runtime.rst  utilities.rst
docs/dev/: constraint_sync_report.md  parameter_constraints_testing.md
docs/developer-guide/: TESTING_COVERAGE_ASSESSMENT.md  architecture.rst  contributing.md  contributing.rst  index.rst  optimization.md  packaging.rst  performance.rst  pytest-config-guide.rst  security.rst  testing.rst  troubleshooting.rst
docs/research/: computational_methods.rst  index.rst  methodology.md  publications.rst  theoretical_framework.rst
docs/user-guide/: advanced-optimization.rst  analysis-modes.rst  cli-reference.rst  complete-workflow-tutorial.rst  configuration-guide.rst  configuration.rst  examples.rst  faq.rst  getting-started.rst  installation.rst  plotting.rst  quick-reference.rst  quickstart.rst  troubleshooting-flowchart.rst
homodyne/: .coveragerc  __init__.py  _version.py  activate_gpu.sh  cli_completion.py  completion_fast.py  config_default_laminar_flow.json  config_default_static_anisotropic.json  config_default_static_isotropic.json  config_default_template.json  config_laminar_flow.json  config_laminar_flow.json.backup_20250820_105900  config_large_dataset_laminar_flow.json  config_large_dataset_static_anisotropic.json  config_large_dataset_static_isotropic.json  config_large_dataset_template.json  config_minimal_template.json  config_small_dataset_laminar_flow.json  config_small_dataset_static_anisotropic.json  config_small_dataset_static_isotropic.json  config_small_dataset_template.json  config_static_anisotropic.json  config_static_anisotropic.json.backup_20250820_105900  config_static_isotropic.json  config_static_isotropic.json.backup_20250820_105900  config_template.json  config_template.json.backup_20250820_105900  create_config.py  enhanced_plotting.py  enhanced_runner.py  gpu_activation_smart.sh  gpu_wrapper.py  homodyne_completion_bypass.zsh  performance_baseline.py  performance_monitoring.py  plotting.py  post_install.py  run_homodyne.py  run_tests.py  system_validator.py  (+2 more)
homodyne/analysis/: __init__.py  core.py  helpers.py
homodyne/cli/: __init__.py  core.py  create_config.py  enhanced_runner.py  import_manager.py  optimization.py  parser.py  run_homodyne.py  simulation.py  utils.py  visualization.py
homodyne/config/: distributed_ml_config.json  laminar_flow.json  solver_optimization_analysis.md  solver_optimization_summary.md  static_anisotropic.json  static_isotropic.json  template.json  update_solver_configs.py
homodyne/core/: __init__.py  analysis.py  blas_kernels.py  caching.py  composed_analysis.py  composition.py  config.py  cpu_optimization.py  initialization_optimizer.py  io_utils.py  kernels.py  lazy_imports.py  mathematical_optimization.py  optimization_utils.py  performance_analytics.py  performance_utils.py  profiler.py  result_memoization.py  secure_io.py  security_metrics.py  security_performance.py  workflows.py
homodyne/data/: __init__.py  xpcs_loader.py
homodyne/optimization/: mcmc.py  (+11 more)
performance_monitoring/: performance_baselines.json  weekly_maintenance.py  weekly_report_20250928.md
performance_reports/: array_profiling_report.txt  ci_regression_check.sh  integrated_performance_report_20250928_161110.json  integrated_performance_summary_20250928_161110.txt  matrix_profiling_report.txt  monitoring_summary.txt  performance_baseline_1759043979.json  performance_data.json  performance_summary_1759043979.txt  regression_check_20250928_161128.json  regression_report_20250928_161128.txt
scripts/: advanced_scientific_optimization.py  continuous_performance_monitor.py  install_gpu_autoload.py  integrated_performance_benchmark.py  run_performance_analysis.py  run_performance_tests.py  security_check.py  validate_constraints.py  validate_requirements.py  validate_structural_optimizations.py  validate_version_consistency.py
sphinx_docs/: analysis_modes.rst  conf.py  contributing.rst  data_validation.rst  index.rst  quickstart.rst  testing.rst  troubleshooting.rst  usage.rst
(+414 files in other folders)
